--- a/src/app/pages/login/login.scss
+++ b/src/app/pages/login/login.scss
@@ -4,6 +4,7 @@
   height: 100vh;
   background-color: var(--color-bg-light);
   display: flex;
+  justify-content: center;
 
   .btn-outline {
     transition:
